[gd_scene load_steps=2 format=3 uid="uid://c655fwj8hslss"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="UnitTimer" type="Timer" parent="."]
autostart = true

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.364706, 0.713726, 1)

[node name="Units" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.497
anchor_right = 0.497
offset_left = -125.05
offset_top = 32.0
offset_right = 125.2
offset_bottom = 68.0
theme_override_font_sizes/font_size = 24
text = "Units:"

[node name="Level" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.312
anchor_bottom = 0.312
offset_left = 23.7
offset_top = -12.8
offset_right = 78.0
offset_bottom = 6.39999
text = "Level: 0"

[node name="CurrentUnitsperSecs" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.392
anchor_bottom = 0.392
offset_left = 23.7
offset_top = -12.8
offset_right = 147.0
offset_bottom = 6.39999
text = "Current Units/s: 1"

[node name="Price" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.536
anchor_bottom = 0.536
offset_left = 23.7
offset_top = -13.2
offset_right = 78.0
offset_bottom = 5.59999
text = "Price: 5"

[node name="Upgrade" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.619
anchor_bottom = 0.619
offset_left = 23.7
offset_top = -15.6
offset_right = 94.8
offset_bottom = 9.20001
text = "Upgrade"

[node name="ResetButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.48
anchor_top = 1.0
anchor_right = 0.48
anchor_bottom = 1.0
offset_left = -25.5
offset_top = -56.0
offset_right = 25.5
offset_bottom = -32.0
text = "Reset"

[node name="UpgradeTimer" type="Timer" parent="."]
wait_time = 0.15
autostart = true

[connection signal="tree_exiting" from="." to="." method="_on_Main_tree_exiting"]
[connection signal="timeout" from="UnitTimer" to="." method="_on_UnitTimer_timeout"]
[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="timeout" from="UpgradeTimer" to="." method="_on_UpgradeTimer_timeout"]
